[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "w3-mcp-server-falkordb"
version = "0.1.0"
description = "MCP server for graph database operations with FalkorDB"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "W3 Labs", email = "dev@w3labs.io"}]
keywords = ["mcp", "falkordb", "graph-database", "cypher", "query"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
w3-mcp-server-falkordb = "server:main"

[project.urls]
Homepage = "https://github.com/famtong8-dev/w3-mcp-server-falkordb"
Repository = "https://github.com/famtong8-dev/w3-mcp-server-falkordb"
Documentation = "https://github.com/famtong8-dev/w3-mcp-server-falkordb/blob/main/README.md"
Issues = "https://github.com/famtong8-dev/w3-mcp-server-falkordb/issues"

[tool.setuptools]
py-modules = ["server"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py311"
